# akgentic-infra

./: .env.example  .gitignore  README.md  channels.yaml  pyproject.toml
.github/workflows/: ci.yml
src/akgentic/: __init__.py
src/akgentic/infra/: __init__.py  errors.py  utils.py  wiring.py
src/akgentic/infra/adapters/: __init__.py  channel_dispatcher.py  channel_parser_registry.py  local_ingestion.py  local_placement.py  local_runtime_cache.py  local_service_registry.py  local_team_handle.py  local_worker_handle.py  null_channel_registry.py  telegram_adapter.py  telegram_parser.py  telemetry_subscriber.py  websocket_subscriber.py  yaml_channel_registry.py
src/akgentic/infra/adapters/community/: __init__.py  local_event_stream.py  local_ingestion.py  local_placement.py  (+6 more)
src/akgentic/infra/cli/: __init__.py  client.py  commands.py  connection.py  event_router.py  formatters.py  main.py  renderers.py  repl.py  repl_commands.py  team_selector.py  ws_client.py
src/akgentic/infra/protocols/: __init__.py  auth.py  authz.py  channels.py  event_stream.py  health.py  placement.py  recovery.py  runtime_cache.py  team_handle.py  worker_handle.py
src/akgentic/infra/server/: __init__.py  app.py  auth.py  auth_loader.py  deps.py  errors.py  logging_config.py  models.py  settings.py  state_keys.py
src/akgentic/infra/worker/: __init__.py  app.py  deps.py  settings.py  state_keys.py
tests/: __init__.py  conftest.py  test_angular_v1_adapter.py  test_angular_v1_ws.py  test_app.py  test_catalog_routes.py  test_channel_dispatcher.py  test_channel_parser_registry.py  test_cli_client.py  test_cli_commands.py  test_cli_commands_insession.py  test_cli_formatters.py  test_cli_renderers.py  test_cli_repl.py  test_cli_ws_client.py  test_deps.py  test_errors.py  test_event_stream_protocol.py  test_frontend_adapter.py  test_local_event_stream.py  test_local_ingestion.py  test_local_placement.py  test_local_runtime_cache.py  test_local_service_registry.py  test_local_team_handle.py  test_local_worker_handle.py  test_logging_config.py  test_namespace_coexistence.py  test_no_auth.py  test_protocols.py  test_public_api.py  test_server_models.py  test_server_settings.py  test_state_key.py  test_team_action_routes.py  test_team_action_service.py  test_team_routes.py  test_team_service.py  test_telegram_adapter.py  test_telegram_integration.py  (+9 more)
tests/adapters/community/: test_local_ingestion.py  test_local_placement.py  test_local_runtime_cache.py  test_local_team_handle.py  test_local_worker_handle.py  test_no_auth.py  test_null_channel_registry.py  test_yaml_channel_registry.py
tests/adapters/shared/: test_channel_dispatcher.py  test_channel_parser_registry.py  test_event_stream_subscriber.py  test_runtime_cache_eviction_subscriber.py  test_telegram_adapter.py  test_telegram_integration.py  test_telegram_parser.py  test_telemetry_restore.py  test_telemetry_subscriber.py
tests/channels/: conftest.py  test_channel_dispatcher.py  test_channel_parser_registry.py  test_null_channel_registry.py  test_telegram_adapter.py  test_telegram_integration.py  test_yaml_channel_registry.py
tests/cli/: conftest.py  debug_tui.py  test_callback.py  test_callback_no_config_regression.py  test_cli_client.py  test_cli_commands.py  test_cli_commands_insession.py  test_cli_connection.py  test_cli_event_router.py  test_cli_main.py  test_cli_repl.py  test_cli_team_selector.py  test_cli_ws_client.py  test_tui_commands.py  test_tui_input.py  test_tui_layout.py  test_tui_streaming.py  test_tui_team_select.py  test_tui_widgets.py
tests/cli/auth/: test_cache.py  test_oidc.py  test_token_provider.py
tests/cli/commands/: __init__.py  test_catalog.py  test_channel_reload.py  test_login.py  test_logout.py  test_naming_collision.py
tests/cli/config/: test_profile.py
tests/cli/http/: test_auto_auth.py  test_client.py
tests/e2e/: conftest.py  test_cli.py  test_rest_api.py  test_v1_frontend.py  test_websocket.py
tests/fixtures/: README.md  events.py  models.py  test_fixture_factories.py
tests/frontend_adapter/: conftest.py  test_angular_v1_adapter.py  test_angular_v1_ws.py  test_frontend_adapter.py  test_v1_human_input_inner_id.py  test_v1_ws_classify.py
tests/integration/: __init__.py  _helpers.py  conftest.py  test_adr003_tier_agnostic.py  test_adr004_v1_compat.py  test_catalog.py  test_channels.py  test_cli.py  test_delete_team_workspace_cleanup.py  test_event_stream_lifecycle.py  test_events.py  test_frontend_adapter.py  test_graceful_shutdown.py  test_readiness_integration.py  test_repl_commands.py  test_repl_e2e.py  test_smoke.py  test_spec_catalog.py  test_spec_channels.py  test_spec_compliance.py  test_spec_frontend.py  test_team_lifecycle.py  test_v1_adapter.py  test_websocket.py
tests/server/: conftest.py  test_auth_loader.py  test_lifespan.py  test_ws_streaming.py
tests/server/middleware/: test_require_auth.py
tests/server/models/: conftest.py  test_server_models.py  test_server_settings.py
tests/server/routes/: conftest.py  test_admin_catalog.py  test_admin_catalog_mount.py  test_auth_gate.py  test_catalog_admin_all_reads.py  test_catalog_as_caller_wiring.py  test_catalog_import_owner_or_admin_gate.py  test_catalog_owner_or_admin_gate.py  test_catalog_routes.py  test_owner_or_admin_policy.py  test_readiness.py  test_server_error_handler.py  test_state_key_migration.py  test_team_access.py  test_team_action_routes.py  test_team_agent_states_routes.py  test_team_routes.py  test_v1_state_update_routes.py  test_webhook_route.py  test_websocket_route.py  test_websocket_subscriber.py  test_workspace_does_not_block_event_loop.py  test_workspace_routes.py
tests/server/services/: conftest.py  test_team_action_service.py  test_team_service.py
tests/worker/: test_app_lifespan_telemetry_close.py  test_routes_memory_diagnostics.py  test_routes_teams.py  test_worker_app.py  test_worker_deps.py  test_worker_human_input_inner_id.py  test_worker_init_public_surface.py  test_worker_lifecycle.py  test_worker_settings.py
(+74 files in other folders)
