[project]
name = "akgentic-infra"
version = "1.4.0"
description = "Infrastructure backend: protocol abstractions and community-tier implementations for akgentic"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "B12 Consulting", email = "info@b12consulting.com" }
]
keywords = ["agents", "ai", "akgentic", "infrastructure"]

dependencies = [
    "akgentic-core",
    "akgentic-team",
    "akgentic-catalog",
    "akgentic-agent",
    "akgentic-llm",
    "akgentic-tool",
    # Pin away from the Starlette 1.3 / FastAPI 0.137 line: Starlette 1.3 changed
    # include_router to wrap mounted routers in a lazy `_IncludedRouter` instead of
    # flattening child APIRoutes into `app.routes`. That breaks the owner-or-admin
    # gate attachment (which mutates each route's `dependant`) and route-introspection
    # tests. CI has no lockfile (installs `-e .[dev]` from a wheelhouse), so these
    # bounds are the only thing keeping resolution on the verified-good combo
    # (fastapi 0.136.x + starlette 1.0.x). Revisit once the gate is reworked for the
    # lazy-inclusion model.
    "fastapi>=0.100.0,<0.137",
    "starlette>=0.46.0,<1.1",
    "pydantic-settings>=2.0.0",
    "logfire>=0.1.0",
    "typer[all]>=0.9.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "wsproto>=1.2.0",
    "rich>=13.0.0",
    "textual>=1.0.0",
]

[project.scripts]
ak-infra = "akgentic.infra.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "python-dotenv>=1.0.0",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Note: akgentic-* dependencies have NO [tool.uv.sources] entry here.
# - Inside the akgentic-quick-start workspace, the workspace root's
#   [tool.uv.sources] resolves them as editable workspace members.
# - In standalone CI, they are built from RELEASE_BRANCH into a local
#   wheelhouse and installed via `uv pip install --find-links` — see ci.yml.

[tool.hatch.build.targets.wheel]
packages = ["src/akgentic"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC", "C901", "PLR0912", "PLR0915"]
ignore = ["ANN401", "N802"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-branches = 12
max-statements = 50

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: Full server flow tests requiring real LLM and API keys",
    "llm: Tests requiring LLM API keys (auto-skipped when OPENAI_API_KEY is absent)",
    "smoke: End-to-end smoke tests using TestModel (no API key required)",
    "e2e: Real end-to-end tests requiring a running server and OPENAI_API_KEY",
]
# --timeout is a deadlock backstop, not a latency budget: a true hang waits
# forever, so a generous bound catches it while leaving headroom for real-LLM
# integration/e2e turns (a single poll can take ~60s). --timeout-method=thread
# dumps every thread's stack when it fires, pinpointing the wedge.
addopts = "-m 'not integration' --cov=akgentic.infra --cov-branch --timeout=300 --timeout-method=thread"
filterwarnings = ["ignore:No logs or spans:UserWarning"]

[tool.coverage.report]
fail_under = 90
